# arlo-assistant

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: b2a4c1d7f010_health_daily_user_date_unique.py  dddb487ae950_initial_schema.py
app/: main.py
app/api/: auth.py  calendar.py  chat.py  goals.py  grocery.py  habits.py  health.py  health_check.py  integrations.py  knowledge.py  recipes.py  reminders.py  tasks.py
app/core/: config.py  exceptions.py  logging_config.py  middleware.py  security.py  time.py
app/db/: engine.py  models.py
app/llm/: claude.py  extractors.py  prompts.py
app/services/: auth_service.py  calendar_service.py  chat_service.py  health_service.py  healthkit_service.py  knowledge_service.py  recipe_service.py  reminder_service.py  runtime_service.py  task_service.py  weather_service.py
docker/: entrypoint.sh
tests/: conftest.py  test_auth.py  test_chat.py  test_extractors.py  test_full_api.py  test_health_check.py  test_health_data.py  test_prompts.py
